--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0"
   },
+  "devDependencies": {
+    "cypress": "^9.4.1",
+    "cypress-localstorage-commands": "^1.6.1",
+    "eslint-plugin-cypress": "^2.12.1"
+  },
   "scripts": {
+    "cypress": "cypress open",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
@@ -15,7 +21,8 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:cypress/recommended"
     ]
   },
   "browserslist": {
